--- a/FRONT-END/style.css
+++ b/FRONT-END/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: gray;
 }
 
 .comments {
@@ -10,8 +11,8 @@ body {
     padding: 20px;
     color: brown;
     font-weight: bolder;
-    border: 3px solid black;
     border-radius: 10px;
+    
 }
 
 .comments *{
@@ -28,7 +29,6 @@ body {
     color: rgb(17, 35, 41);
     border-radius: 5px;
     border: 1px solid black;
-    background-color: antiquewhite;
 }
 
 #form-comentario .btn-submit{
@@ -45,4 +45,10 @@ body {
 .date{
     font-size: 9px;
     text-align: right;
+}
+
+.col{
+    margin: 20px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
 }
